--- a/html/rrhh.html
+++ b/html/rrhh.html
@@ -63,7 +63,7 @@
                 <input class="emailEmpleo" type="email" name="email" placeholder="Email">
                 <input class="edadEmpleo" type="number" name="edad" placeholder="Edad">
                 <input class="estudiosEmpleo" type="text" name="estudios" placeholder="Estudios">
-                <p class="pregunta">¿Actualmente se encuentra estudiando?</p>
+                <p class="preguntaEmpleo">¿Actualmente se encuentra estudiando?</p>
                 <div class="si">Si<input type="radio" name="estudios"></div>
                 <div class="no">No<input type="radio" name="estudios"></div>
                 <textarea class="mensajeEmpleo" name="mensaje" id="mensaje" cols="30" rows="10" placeholder="Presentación"></textarea>
