--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <nav>
                 <ul>
                     <li>
-                        <a class="navegador animate__animated animate__pulse" href="index.html">Nosotros</a>
+                        <a class="navegador" href="index.html">Nosotros</a>
                     </li>
                     <li>
                         <a class="navegador" href="html/servicios.html">Servicios</a>
@@ -104,7 +104,7 @@
             </div>
             <img class="oficinaTecnicaimg" src="images/oficinaTecnica.jpg" alt="oficinaTecnica" data-aos="flip-up">
         </section>
-    <section class="indexC">
+        <section class="indexC">
             <div class="cajaObra" data-aos="fade-right">
                 <h3 class="ejecucionObra"><br>EJECUCION DE OBRA</h3>
                 <p class="leyendaObra">
@@ -126,9 +126,12 @@
     <footer class="footer">
 
         <img class="logoVirafooter" src="images/logovirablanco.png" alt="logovirablanco">
-        <ul class="redesSociales"> <p class="leyendaRedes">Redes Sociales</p>
+        <ul class="redesSociales"> 
+            <p class="leyendaRedes">Redes Sociales</p>
             <li class="cajaInstagram">
-                <a href="https://www.instagram.com/viraconstructora"><img class="logoInstagram" src="images/instagram.png" alt="instagram"></a>
+                <a href="https://www.instagram.com/viraconstructora">
+                    <img class="logoInstagram" src="images/instagram.png" alt="instagram">
+                </a>
                 <a class="enlaceInstagram" href="https://www.instagram.com/viraconstructora">@viraconstructora</a>
             </li>
             <li class="cajaFacebook">
