--- a/html/rrhh.html
+++ b/html/rrhh.html
@@ -43,7 +43,9 @@
                 </nav>
             </div>
         </div>
-        <p class="teAcompañamos">TE ACOMPAÑAMOS DE PRINCIPIO A FIN...</p>
+        <div class="teAcompañamoscaja">
+            <p class="teAcompañamos">TE ACOMPAÑAMOS DE PRINCIPIO A FIN...</p>
+        </div>
     </header>
 
     <main>
