--- a/html/servicios.html
+++ b/html/servicios.html
@@ -85,12 +85,12 @@
         <img class="logoVirafooter" src="../images/logovirablanco.png" alt="logovirablanco">
         <ul class="redesSociales"> <p class="leyendaRedes">Redes Sociales</p>
             <li class="cajaInstagram">
-                <a href="https://www.instagram.com/viraconstructora"><img class="logoInstagram" src="../images/instagram.png" alt="instagram"></a>
+                <a href="https://www.instagram.com/viraconstructoraok"><img class="logoInstagram" src="../images/instagram.png" alt="instagram"></a>
                 <a class="enlaceInstagram" href="http://www.instagram.com/viraconstructora">@viraconstructora</a>
             </li>
             <li class="cajaFacebook">
                 <a href="https://www.facebook.com/viraconstructora"><img class="logoFacebook"src="../images/facebook.png" alt="facebook"></a>
-                <a class="enlaceFacebook"href="http://www.facebook.com/viraconstructora">/viraconstructora</a>
+                <a class="enlaceFacebook"href="http://www.facebook.com/viraconstructoraok">/viraconstructora</a>
             </li>
         </ul>
         <p class="leyendaFooter">
