--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
                 <a class="enlaceInstagram" href="https://www.instagram.com/viraconstructora">@viraconstructora</a>
             </li>
             <li class="cajaFacebook">
-                <a href="https://www.facebook.com/viraconstructora"><img class="logoFacebook"src="images/facebook.png" alt="facebook"></a>
-                <a class="enlaceFacebook"href="https://www.facebook.com/viraconstructora">/viraconstructora</a>
+                <a href="https://www.facebook.com/viraconstructoraok"><img class="logoFacebook"src="images/facebook.png" alt="facebook"></a>
+                <a class="enlaceFacebook"href="https://www.facebook.com/viraconstructoraok">/viraconstructora</a>
             </li>
         </ul>
         <p class="leyendaFooter">
