--- a/html/rrhh.html
+++ b/html/rrhh.html
@@ -84,8 +84,8 @@
                 <a class="enlaceInstagram" href="http://www.instagram.com/viraconstructora">@viraconstructora</a>
             </li>
             <li class="cajaFacebook">
-                <a href="https://www.facebook.com/viraconstructora"><img class="logoFacebook"src="../images/facebook.png" alt="facebook"></a>
-                <a class="enlaceFacebook"href="http://www.facebook.com/viraconstructora">/viraconstructora</a>
+                <a href="https://www.facebook.com/viraconstructoraok"><img class="logoFacebook"src="../images/facebook.png" alt="facebook"></a>
+                <a class="enlaceFacebook"href="http://www.facebook.com/viraconstructoraok">/viraconstructora</a>
             </li>
         </ul>
         <p class="leyendaFooter">
