--- a/html/contacto.html
+++ b/html/contacto.html
@@ -46,7 +46,7 @@
 
     <main>
         <h2 class="tituloContacto">CONTACTO</h2>
-        <form class="formContacto" action="#">
+        <form class="formContacto" action="https://formspree.io/f/mnqwzpyo" method="POST">
 
             <input class="nombre" type="text" name="nombre" placeholder="Nombre">
             <input class="email" type="email" name="email" placeholder="Email">
