--- a/html/rrhh.html
+++ b/html/rrhh.html
@@ -60,7 +60,7 @@
             <br>
         </p>
         <div class="formCaja" data-aos="flip-right">
-            <form class="formEmpleo" action="#">
+            <form class="formEmpleo" action="https://formspree.io/f/xjvloydj" method="POST">
                 <input class="nombreEmpleo" type="text" name="nombre" placeholder="Nombre">
                 <input class="emailEmpleo" type="email" name="email" placeholder="Email">
                 <input class="edadEmpleo" type="number" name="edad" placeholder="Edad">
