--- a/html/rrhh.html
+++ b/html/rrhh.html
@@ -69,6 +69,14 @@
                 <div class="si">Si<input type="radio" name="estudios"></div>
                 <div class="no">No<input type="radio" name="estudios"></div>
                 <textarea class="mensajeEmpleo" name="mensaje" id="mensaje" cols="30" rows="10" placeholder="Presentación"></textarea>
+                <div id="f9410b1f70978a080483f2" class="filedrop">
+                    <div class="files"></div>
+                    <div class="dropZone">
+                        Soltar archivos aquí o  
+                        <a href="#" class="manual"> elegirlos </a>        
+                        <input type="file" multiple="multiple" style="display: none; width: 0px; height: 0px;" accept=".doc,.pdf,.jpg,.jpeg,.gif,.png,.xls,.docx,.xlsx,.txt">
+                    </div>
+                </div>
                 <input class="enviarEmpleo" type="submit" value="ENVIAR">
             </form>
         </div>
