--- a/html/rrhh.html
+++ b/html/rrhh.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Constructora VIRA. Realizamos obras civiles y de arquitectura, para desarrollos inmobiliarios y particulares">
     <title>Vira Constructora</title>
     <link rel="icon" href="../images/faviconvira.ico">
     <link rel="stylesheet" href="../css/style.css">
