--- a/html/rrhh.html
+++ b/html/rrhh.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Construccion, Ingenieria, Arquitectura, Diseño">
     <meta name="description" content="Constructora VIRA. Realizamos obras civiles y de arquitectura, para desarrollos inmobiliarios y particulares">
     <title>Vira Constructora</title>
-    <link rel="icon" href="../images/faviconvira.ico">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel = "preconnect" href = "https://fonts.googleapis.com">
-    <link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
-    <link href = "https: //fonts.googleapis.com/css2? family = Mukta: wght @ 200 & display = swap "rel =" stylesheet ">
+    <link rel="icon" href="images/faviconvira.ico">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Mukta:wght@200&family=Radio+Canada:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     
@@ -45,7 +46,7 @@
             </div>
         </div>
         <div class="teAcompañamoscaja">
-            <p class="teAcompañamos">TE ACOMPAÑAMOS DE PRINCIPIO A FIN...</p>
+            <h1 class="teAcompañamos">TE ACOMPAÑAMOS DE PRINCIPIO A FIN...</h1>
         </div>
     </header>
 
@@ -61,6 +62,29 @@
             <br>
         </p>
         <div class="formCaja" data-aos="flip-right">
+
+
+            <form class="formEmpleo">
+                <h2 class="formulario">Formulario</h2>
+                <p class="casilleroEmpleo" type="Nombre:">
+                    <input class="inputEmpleo" placeholder="Escriba su nombre aqui..."></input>
+                </p>
+                <p class="casilleroEmpleo" type="Email:">
+                    <input class="inputEmpleo" placeholder="Ingrese su Email..."></input>
+                </p>
+                <p class="casilleroEmpleo" type="Experiencia laboral:">
+                    <input class="inputEmpleo" placeholder="Deje su mesaje aqui..."></input>
+                </p>
+                <button class="botonEmpleo">Enviar</button>
+                <div class="infoContacto">
+                    <img class="iconoTelefono" src="../images/iconoTelefono.png" alt="inconoTelefono">
+                    <p class="telefonoContacto">011-15 6168-4537</p>
+                    <img class="iconoMail" src="../images/iconoMail.png" alt="inconoMail">
+                    <p class="emailContacto">viraconstructora@gmail.com</p>
+                </div>
+            </form>
+
+<!--
             <form class="formEmpleo" action="https://formspree.io/f/xjvloydj" method="POST">
                 <input class="nombreEmpleo" type="text" name="nombre" placeholder="Nombre">
                 <input class="emailEmpleo" type="email" name="email" placeholder="Email">
@@ -80,6 +104,7 @@
                 </div>
                 <input class="enviarEmpleo" type="submit" value="ENVIAR">
             </form>
+-->
         </div>
 
     </main>
