--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Construccion, Ingenieria, Arquitectura, Diseño">
     <meta name="description" content="Constructora VIRA. Realizamos obras civiles y de arquitectura, para desarrollos inmobiliarios y particulares">
     <title>Vira Constructora</title>
     <link rel="icon" href="images/faviconvira.ico">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel = "preconnect" href = "https://fonts.googleapis.com">
-    <link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
-    <link href = "https: //fonts.googleapis.com/css2? family = Mukta: wght @ 200 & display = swap "rel =" stylesheet ">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Mukta:wght@200&family=Radio+Canada:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -41,7 +42,7 @@
             </nav>
         </div>
         <div class="teAcompañamoscaja">
-            <p class="teAcompañamos">TE ACOMPAÑAMOS DE PRINCIPIO A FIN...</p>
+            <h1 class="teAcompañamos">TE ACOMPAÑAMOS DE PRINCIPIO A FIN...</h1>
         </div>
     </header>
 
@@ -124,7 +125,7 @@
         </section>
     </main>
  
-    <footer class="footer">
+    <footer>
 
         <img class="logoVirafooter" src="images/logovirablanco.png" alt="logovirablanco">
         <ul class="redesSociales"> 
@@ -148,6 +149,6 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
-     </script>
+    </script>
 </body>
 </html>
