--- a/html/contacto.html
+++ b/html/contacto.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Construccion, Ingenieria, Arquitectura, Diseño">
     <meta name="description" content="Constructora VIRA. Realizamos obras civiles y de arquitectura, para desarrollos inmobiliarios y particulares">
     <title>Vira Constructora</title>
-    <link rel="icon" href="../images/faviconvira.ico">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel = "preconnect" href = "https://fonts.googleapis.com">
-    <link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
-    <link href = "https: //fonts.googleapis.com/css2? family = Mukta: wght @ 200 & display = swap "rel =" stylesheet ">
+    <link rel="icon" href="images/faviconvira.ico">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Mukta:wght@200&family=Radio+Canada:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     
@@ -41,25 +42,36 @@
             </nav>
         </div>
         <div class="teAcompañamoscaja">
-            <p class="teAcompañamos">TE ACOMPAÑAMOS DE PRINCIPIO A FIN...</p>
+            <h1 class="teAcompañamos">TE ACOMPAÑAMOS DE PRINCIPIO A FIN...</h1>
         </div>
     </header>
 
     <main>
-        <h2 class="tituloContacto">CONTACTO</h2>
-        <form class="formContacto" action="https://formspree.io/f/mnqwzpyo" method="POST">
 
-            <input class="nombre" type="text" name="nombre" placeholder="Nombre">
-            <input class="email" type="email" name="email" placeholder="Email">
-            <input class="empresa" type="text" name="empresa" placeholder="Empresa">
-            <input class="telefono" type="number" name="telefono" placeholder="Telefono">
-            <textarea class="mensaje" name="mensaje" cols="30" rows="10" placeholder="Mensaje"></textarea>
-            <input class="enviar" type="submit" value="ENVIAR">
+        <form class="form">
+            <h2 class="contacto">CONTACTO</h2>
+            <p class="casilleroContacto" type="Nombre:">
+                <input class="inputContacto" placeholder="Escriba su nombre aqui..."></input>
+            </p>
+            <p class="casilleroContacto" type="Email:">
+                <input class="inputContacto" placeholder="Ingrese su Email..."></input>
+            </p>
+            <p class="casilleroContacto" type="Mensaje:">
+                <input class="inputContacto" placeholder="Deje su mesaje aqui..."></input>
+            </p>
+            <button class="botonContacto">Enviar</button>
+            <div class="infoContacto">
+                <img class="iconoTelefono" src="../images/iconoTelefono.png" alt="inconoTelefono">
+                <p class="telefonoContacto">011-15 6168-4537</p>
+                <img class="iconoMail" src="../images/iconoMail.png" alt="inconoMail">
+                <p class="emailContacto">viraconstructora@gmail.com</p>
+            </div>
         </form>
         <h2 class="tituloEncontranos">DONDE ENCONTRARNOS</h2>
         <div class="cajaUbicacion">
             <iframe data-aos="fade-up-left" class="ubicacion" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1337.7179818414406!2d-56.86031825860794!3d-37.11350799964045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1636295195357!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
+
     </main>
 
     <footer class="footer">
